# ProjectEuler

./: .gitignore  .pre-commit-config.yaml  Exercice01.py  Exercice02.py  Exercice04.py  Exercice05.py  Exercice06.py  Exercice07.py  Exercice08.py  Exercice09.py  Exercice1.py  Exercice10.py  Exercice11.py  Exercice12.py  Exercice13.py  Exercice14.py  Exercice15.py  Exercice16.py  Exercice17.py  Exercice18.py  Exercice2.py  Exercice20.py  Exercice21.py  Exercice22.py  Exercice4.py  Exercice6.py  ProjectEuler.py  pyproject.toml  setup.cfg
src/euler/: __init__.py  __main__.py  cli.py
src/euler/exercises/: __init__.py  _registry.py  exercise_1.py  exercise_10.py  exercise_11.py  exercise_12.py  exercise_13.py  exercise_14.py  exercise_15.py  exercise_16.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  exercise_8.py  exercise_9.py
src/tests/: __init__.py
tests/euler/: test_cli.py  test_project_info.py  test_version.py
tests/euler/exercises/: test_exercise_1.py  test_exercise_2.py  test_exercise_4.py  test_exercise_5.py  test_exercise_6.py  test_exercise_7.py  test_exercise_8.py
v1/: Exercice01.py  Exercice02.py  Exercice03.py  Exercice04.py  Exercice05.py  Exercice06.py  Exercice07.py  Exercice08.py  Exercice09.py  Exercice10.py  Exercice11.py  Exercice12.py  Exercice13.py  Exercice14.py  Exercice15.py  Exercice16.py  Exercice17.py  Exercice18.py  Exercice20.py  Exercice21.py  Exercice22.py
v2/: cli.py
v2/exercises/: __init__.py  _registry.py  exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  exercise_8.py  exercise_9.py
