[tool.poetry]
name = "projecteuler"
version = "0.1.0"
description = "Project Euler"
authors = ["Raphaël Landuré <raph.landure@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
numpy = "^1.23.1"
memory-profiler = "^0.60.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
# Compatibility with black (source: https://github.com/psf/black/blob/master/docs/compatible_configs.md#isort)
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
