[tool.poetry]
name = "euler"
version = "0.1.0"
description = "Project Euler"
authors = ["Raphaël Landuré <raph.landure@gmail.com>"]
readme = "README.md"
packages = [
    {include="euler", from="src"}
]

[tool.poetry.dependencies]
python = "~3.9"
tqdm = "4.64.1"
numpy = "1.23.4"
typer = "0.6.1"

[tool.poetry.dev-dependencies]
black = "22.10.0"
mypy = "0.982"
pylint = "2.15.5"
flake8 = "5.0.4"
pre-commit = "2.20.0"
isort = "5.10.1"
autoflake = "1.7.7"
pytest = "7.2.0"

[tool.poetry.scripts]
euler = "euler.__main__:main"

[tool.black]
line-length = 100

[tool.isort]
# Compatibility with black (source: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort)
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "ex", "Run", "_", # Default names that come from the pylint configuration.
    "x", "y", "z"
]

[tool.pylint.format]
# Compatibility with black (source: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint)
max-line-length = 100

[tool.pylint.master]
ignore = [".git", ".venv", "scripts"]
ignore-patterns = "test_.*?py"

[tool.pylint.similarities]
min-similarity-lines=8
ignore-imports=true
ignore-signatures=true

[tool.pytest.ini_options]
addopts = "--doctest-modules --basetemp .pytest"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]
fail_under = 20

[tool.mypy]
files = ["src/euler"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = ["tqdm.*"]
ignore_missing_imports = true
