[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "euler"
version = "0.1.0"
description = "Project Euler"
authors = ["Raphaël Landuré <raph.landure@gmail.com>"]
readme = "README.md"
packages = [
    {include="euler", from="src"}
]

[tool.poetry.dependencies]
python = "~3.11"
tqdm = "4.65.0"
numpy = "1.25.1"
typer = "0.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "3.3.3"
pytest = "7.4.0"
black = "23.7.0"
mypy = "1.4.1"
pylint = "2.17.4"
ruff = "0.0.278"

[tool.poetry.scripts]
euler = "euler.__main__:main"

[tool.black]
line-length = 100

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "ex", "Run", "_", # Default names that come from the pylint configuration.
    "x", "y", "z"
]

[tool.pylint.format]
# Compatibility with black (source: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint)
max-line-length = 100

[tool.pylint.master]
ignore = [".git", ".venv", "scripts"]
ignore-patterns = "test_.*?py"

[tool.pylint.similarities]
min-similarity-lines=8
ignore-imports=true
ignore-signatures=true

[tool.pytest.ini_options]
addopts = "--doctest-modules --basetemp .pytest"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]
fail_under = 20

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F"]

[tool.mypy]
files = ["src/euler"]


[[tool.mypy.overrides]]
module = ["tqdm.*"]
ignore_missing_imports = true
